src/objects/Delivery_Rejection__c.object
<CustomObject>
    <fields>
        <fullName>Alsur_Farmer__c</fullName>
        <label>Alsur Farmer</label>
        <referenceTo>Alsur_Farmer__c</referenceTo>
        <relationshipLabel>Delivery Rejections</relationshipLabel>
        <relationshipName>Delivery_Rejections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPA_Order_Delivery__c</fullName>
        <label>CPA Order Delivery</label>
        <referenceTo>CPA_Order_Delivery__c</referenceTo>
        <relationshipLabel>Delivery Rejections</relationshipLabel>
        <relationshipName>Delivery_Rejections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_of_Kilos_Rejected__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Number of Kilos Rejected</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Delivery Rejection</label>
    <nameField>
        <displayFormat>D-{000000}</displayFormat>
        <label>Delivery Rejection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Rejections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>